test/files/pos/t1231/S.scala
object S extends App { println(J.j1) }
