test/files/neg/macro-divergence-controlled/Test_2.scala
object Test extends App {
  println(implicitly[Complex[Foo]])
}